Clean elven trade handler